# safe_deferral

./: .gitignore  CLAUD.md  CLAUDE.md  Makefile  README.md  README_BUNDLE.md  requirements-mac.txt  requirements-rpi.txt
common/: asset_manifest.json
common/docs/: 01_installation_target_classification.md  INSTALLATION_TARGET_CLASSIFICATION_FREEZE_MANIFEST.md  WORK_PLAN.md  required_experiments.md
common/mqtt/: README.md  publisher_subscriber_matrix.md  publisher_subscriber_matrix_v1_0_0.md  topic_payload_contracts.md  topic_payload_contracts_v1_0_0.md  topic_registry.json  topic_registry_v1_0_0.json  topic_registry_v1_1_0.json
common/payloads/: README.md
common/policies/: LOW_RISK_ACTIONS_FREEZE_MANIFEST.md  fault_injection_rules.json  fault_injection_rules_v1_4_0_FROZEN.json  low_risk_actions.json  low_risk_actions_v1_0_0_FROZEN.json  low_risk_actions_v1_1_0_FROZEN.json  output_profile.json  output_profile_v1_0_0.json  output_profile_v1_1_0.json  policy_table.json  policy_table_v1_1_2_FROZEN.json  policy_table_v1_2_0_FROZEN.json
common/schemas/: CONTEXT_SCHEMA_FREEZE_MANIFEST.md  VALIDATOR_OUTPUT_SCHEMA_FREEZE_MANIFEST.md  candidate_action_schema.json  candidate_action_schema_v1_0_0_FROZEN.json  clarification_interaction_schema.json  clarification_interaction_schema_v1_0_0_FROZEN.json  class2_candidate_set_schema.json  class2_notification_payload_schema.json  class_2_notification_payload_schema_v1_0_0_FROZEN.json  class_2_notification_payload_schema_v1_1_0_FROZEN.json  context_schema.json  context_schema_v1_0_0_FROZEN.json  policy_router_input_schema.json  policy_router_input_schema_v1_1_1_FROZEN.json  validator_output_schema.json  validator_output_schema_v1_0_0_FROZEN.json  validator_output_schema_v1_1_0_FROZEN.json
common/terminology/: TERM_FREEZE_CONTEXT_INTEGRITY_SAFE_DEFERRAL_STAGE.md  TERM_FREEZE_MANIFEST.md
docs/setup/: 01_mac_mini_setup.md  02_rpi_setup.md  03_esp32_setup.md  04_stm32_setup.md  05_integration_run.md  06_local_macbook_e2e.md  README.md
esp32/: README.md
esp32/code/: README.md
esp32/code/pn01_button_input/main/: CMakeLists.txt  pn01_button_input.c
esp32/code/pn06_fall_detection/main/: CMakeLists.txt  pn06_fall_detection.c
esp32/code/pn08_doorlock_interface/main/: CMakeLists.txt  pn08_doorlock_interface.c
esp32/docs/: BOM.md  README.md
esp32/firmware/: README.md
esp32/scripts/: README.md
integration/: README.md  requirements.md
integration/measurement/: README.md  class_wise_latency_profiles.md  experiment_preflight_readiness_design.md  experiment_registry_skeleton.yaml  ha_realtime_adapter.py  node_registry_skeleton.yaml  preflight_readiness_aggregator_skeleton.py  runtime_state_collector.py  sample_state_snapshot.yaml  stm32_nucleo_h723zg_measurement_node.md
integration/measurement/stm32/: CMakeLists.txt  VALIDATION_CHECKLIST.md
integration/measurement/stm32/Core/Inc/: sd_measure.h
integration/measurement/stm32/Core/Src/: main.c
integration/measurement/stm32/Drivers/: README.md
integration/measurement/stm32/Modules/capture/: sd_capture.c
integration/measurement/stm32/Modules/export/: sd_export.c
integration/measurement/stm32/Modules/status/: sd_status.c
integration/measurement/stm32/Modules/sync/: sd_sync.c
integration/measurement/stm32/Modules/validation/: sd_validation.c
integration/paper_eval/: matrix_extensibility.json  matrix_extensibility_v2.json  matrix_extensibility_v2_llm_only.json  matrix_extensibility_v2_llm_only_debug5.json  matrix_extensibility_v3_clarification.json  matrix_phase_b.json  matrix_smoke.json  matrix_temp_sweep.json  matrix_v1.json
integration/scenarios/: README.md  baseline_scenario_skeleton.json  class0_e001_scenario_skeleton.json  class0_e002_scenario_skeleton.json  class0_e003_scenario_skeleton.json  class0_e004_scenario_skeleton.json  class0_e005_scenario_skeleton.json  class1_baseline_scenario_skeleton.json  class2_caregiver_confirmation_doorlock_sensitive_scenario_skeleton.json  (+23 more)
scripts/: local_e2e_launcher.sh  local_e2e_smoke_test.sh  run_temp_sweep.sh
(+600 files in other folders)
